--- a/pages/pk/message/message.wxml
+++ b/pages/pk/message/message.wxml
@@ -4,137 +4,82 @@
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
             <view class="rcs" style="flex:1">
-              <view class="rcs pl-4vw pr-4vw" >
-
-                <view class="rcc h-32px " bindtap="back">
-                <image class="h-30 w-30" mode="aspectFit" src="/images/back.png"></image>
-                <!-- <view class="fs-30 fw-300">名片</view> -->
+                <view class="rcs pl-4vw pr-4vw" >
+                    <view class="rcc h-32px " bindtap="back">
+                        <image class="h-30 w-30" mode="aspectFit" src="/images/back.png"></image>
+                        <!-- <view class="fs-30 fw-300">名片</view> -->
+                    </view>
                 </view>
-
-              </view>
             </view>
             <view class="rcc fs-35 fw-700">打卡群</view>
             <view style="flex:1"></view>
-        
         </view>
         <view class="rcs " style="height:10px"></view>
     </view>
-
     <view class="css">
-        <view wx:if="{{mode === 'show'}}">
-        </view>
+        <view wx:if="{{mode === 'show'}}"></view>
         <view wx:else class="css">
             <view hidden="{{imgUrl}}" class="ccc">
                 <view class="ccc br-20" >
-
-                            <view class="rcc">
-                            <image class="" style="width:60vw;height:60vw" src="/images/usercard.png" mode="aspectFit"></image>
-                            </view>
-                            <view class="rcc fs-30 fw-700 c-3">{{t1}}</view>
-                            <view class="h-50"></view>
-                            <view class="rcc fs-25 fw-400 c-5">{{t2}}</view>
+                    <view class="rcc">
+                        <image class="" style="width:60vw;height:60vw" src="/images/usercard.png" mode="aspectFit"></image>
+                    </view>
+                    <view class="rcc fs-30 fw-700 c-3">{{t1}}</view>
+                    <view class="h-50"></view>
+                    <view class="rcc fs-25 fw-400 c-5">{{t2}}</view>
                 </view>
             </view>
         </view>
-
-
-
-
     </view>
-
     <view class="css" >
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
-            <view class="rcs" style="flex:1">
-              <view class="rcs pl-4vw pr-4vw" >
 
-                <view class="rcc h-32px " bindtap="back">
-                <image class="h-30 w-30" mode="aspectFit" src=""></image>
-       >
-                </view>
-
-              </view>
-            </view>
-            <view class="rcc fs-35 fw-700"></view>
-            <view style="flex:1"></view>
-        
         </view>
         <view class="rcs " style="height:10px"></view>
     </view>
-
-
-
-    
-
-
-
-
 </view>
-
 <view class="rbc bottomBar1 z4">
-        <view class="rss ">
-
-        
-        
-        
-        </view>
-        <view class="rcc">
-
-
-            <view wx:if="{{creator.userId === user.userId}}" class=" rcc" >
-                                    <view  class=" w-100 h-100 br-100 rcc box100 b-share" bindtap="uploadGroupCode" >
-                                        <view class="rcc ">
-                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/invite.png"></image>
-                                        </view>
-
-                                    </view>
-            </view>
-            <view wx:else class=" rcc">
-                                    <view  class=" w-100 h-100 br-100 rcc box100 b-publish"  bindtap="saveImg" data-url="{{imgUrl}}" >
-                                        <view class="rcc ">
-                                            <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/invite.png"></image>
-                                        </view>
-
-                                    </view>
+    <view></view>
+    <view class="rcc">
+        <view wx:if="{{creator.userId === user.userId}}" class=" rcc" >
+            <view  class=" w-100 h-100 br-100 rcc box100 b-share" bindtap="uploadGroupCode" >
+                <view class="rcc ">
+                    <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/invite.png"></image>
+                </view>
             </view>
         </view>
-
-
-
-
+        <view wx:else class=" rcc">
+            <view  class=" w-100 h-100 br-100 rcc box100 b-publish"  bindtap="saveImg" data-url="{{imgUrl}}" >
+                <view class="rcc ">
+                    <image class="rcc w-50 h-50 " mode="aspectFit" src="/images/invite.png"></image>
+                </view>
+            </view>
+        </view>
+    </view>
 </view>
-
-
-
 <view>
-
-
     <view class="coverAll" hidden="{{dialog.visible!=true}}"  catchtouchmove="return"></view>
     <view class="css dialogTip" hidden="{{dialog.visible!=true}}">
         <view class="css b-white br-20"   >
             <view class="cbs" style="flex:1">
                 <view class="rcc">
-                     <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
+                    <image class="w-300 h-300" mode="aspectFit" src="{{dialog.tipImg}}"></image>
                 </view>
-                
                 <view class="css">
                     <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{dialog.title}}</view>
                     <view class="h-20"></view>
-                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view> <view class="h-40"></view>
+                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{dialog.text}}</view>
+                    <view class="h-40"></view>
                 </view>
                 <view></view>
                 <view></view>
                 <view class="rcc pt-50 pb-50">
                     <view class="rcc w-300 h-80 br-80 bTipColor fs-30 fw-400 c-white"  bindtap="dialog_confirm" >知道了</view>
                 </view>
-    
             </view>
-
-
         </view>
-        <!-- <view class="rcc p-100">
-            <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
-        </view> -->
+        <!-- <view class="rcc p-100"><image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image></view> -->
     </view>
     <view class="rcc tipDialog " hidden="{{tipDialog.visible!=true}}">
         <view class="ccc levelDialog_view">
@@ -150,11 +95,7 @@
     <view class="coverAll" hidden="{{operateDialog.visible!=true}}"  catchtouchmove="return"></view>
     <view class="css dialogTip" hidden="{{operateDialog.visible!=true}}">
         <view class="css b-white br-20"   >
-            <!-- <view class="rcc">
-                <view class="rcc absolute ">
-                    <image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
-                </view>
-            </view> -->
+            <!-- <view class="rcc"><view class="rcc absolute "><image class="w-600 h-400" mode="aspectFit" src="{{operateDialog.tipImg}}"></image></view></view> -->
             <view class="cbs" style="flex:1">
                 <view class="rcc">
                     <image class="w-300 h-300" mode="aspectFit" src="{{operateDialog.tipImg}}"></image>
@@ -162,26 +103,21 @@
                 <view class="css">
                     <view class="rcc fs-40 fw-700 c-tipColor pl-4vw pr-4vw line-3-center">{{operateDialog.title}}</view>
                     <view class="h-20"></view>
-                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view> <view class="h-40"></view>
+                    <view class="rcc-wrap fs-28 fw-400 c-3  pl-4vw pr-4vw  line-3-center">{{operateDialog.text}}</view>
+                    <view class="h-40"></view>
                 </view>
-
                 <view></view>
                 <view></view>
-
                 <view class="rcc ">
                     <view class="rcc w-250 h-70 br-20 bTipColor fs-25 fw-400 c-white"  bindtap="operateDialog_confirm" >确定</view>
                 </view>
                 <view class="rcc p-30 fs-25 fw-400 c-3"  bindtap="operateDialog_cancel">知道了</view>
-    
             </view>
-
-
         </view>
         <view class="rcc p-100">
             <image class="w-60 h-60" mode="aspectFit" src="/images/close1.png" bindtap="operateDialog_cancel"></image>
         </view>
     </view>
-
     <view class="cac pageLoadingDialog " hidden="{{pageLoadingDialog.visible!=true}}">
         <view class="ccc ">
             <view class="rcc">
@@ -254,48 +190,23 @@
         </view>
     </view>
     <view bindtap="_editImageDialog_closeEdit" catchtouchmove="return" class="rcc coverAll" hidden="{{editImageDialog.visible!=true}}">
-    
-
         <view catchtap="return" class="css pl-8vw pr-8vw z30 br-20  b-white"  style="width:70vw" >
-                <!-- <view class="rbc-nowrap">
-                    <view class="rcc">
-                        <image class="w-60 h-60 br-10" mode="aspectFit" src="{{user.imgUrl}}"></image>
-                    </view>
-                    <view class="w-20"></view>
-                    <view class="css" style="flex:1">
-                        <view class="rus line-1-start fs-30 fw-400 ">{{user.userName}}</view>
-                    </view>
-                    <view class="w-100"></view>
-                    <view class="ccc p-20 " bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}">
-                        <view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view>
-                    </view>
-                </view> -->
-                <!-- <view class="rbc">
-                    <view class="fs-30 fw-400 c-3">{{editImageDialog.images.length}} 张</view>
-                     <view class="fs-20 fw-400 c-3">还可输入{{editImageDialog.left}}个字</view>
-                </view> -->
-
-                <view class="rcc pt-50 pb-50 fs-30 fw-700">编辑内容</view>
-                <view class="css  ">
-
-                    
-                    <view class="css ">
-                        <textarea adjustPosition="true" bindinput="_editImageDialog_input" class="t19-1-edit"  style="height:20vw;width:70vw" cursorSpacing="50" fixed="true" maxlength="50" placeholder="{{editImageDialog._default_edit_text}}" value="{{editImageDialog.text}}"></textarea>
-                    </view>
-                    <view class="h-20"></view>
-                    <view class="rcc">
-                        <image class="br-10" mode="aspectFill" src="{{editImageDialog.images[0]}}" style="height:70vw;width:70vw" ></image>
-                    </view>
-
+            <!-- <view class="rbc-nowrap"><view class="rcc"><image class="w-60 h-60 br-10" mode="aspectFit" src="{{user.imgUrl}}"></image></view><view class="w-20"></view><view class="css" style="flex:1"><view class="rus line-1-start fs-30 fw-400 ">{{user.userName}}</view></view><view class="w-100"></view><view class="ccc p-20 " bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}"><view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view></view></view> -->
+            <!-- <view class="rbc"><view class="fs-30 fw-400 c-3">{{editImageDialog.images.length}} 张</view><view class="fs-20 fw-400 c-3">还可输入{{editImageDialog.left}}个字</view></view> -->
+            <view class="rcc pt-50 pb-50 fs-30 fw-700">编辑内容</view>
+            <view class="css  ">
+                <view class="css ">
+                    <textarea adjustPosition="true" bindinput="_editImageDialog_input" class="t19-1-edit"  style="height:20vw;width:70vw" cursorSpacing="50" fixed="true" maxlength="50" placeholder="{{editImageDialog._default_edit_text}}" value="{{editImageDialog.text}}"></textarea>
                 </view>
-
-                <view class="ccc pt-50 pb-50" bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}">
-                    <view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view>
+                <view class="h-20"></view>
+                <view class="rcc">
+                    <image class="br-10" mode="aspectFill" src="{{editImageDialog.images[0]}}" style="height:70vw;width:70vw" ></image>
                 </view>
+            </view>
+            <view class="ccc pt-50 pb-50" bindtap="{{(editImageDialog.text && editImageDialog.images[0])?'_editImageDialog_confirm':''}}">
+                <view  class="{{(editImageDialog.text && editImageDialog.images[0])?'rcc c-5 fs-25 fw-700':'rcc c-3-1 fs-25 fw-700'}}">确定</view>
+            </view>
         </view>
-
-    
-    
     </view>
     <view bindtap="" catchtouchmove="return" class="coverAll" hidden="{{editTextDialog.visible!=true}}"></view>
     <view catchtouchmove="return" class="css editTextDialog" hidden="{{editTextDialog.visible!=true}}">
@@ -353,17 +264,4 @@
             </view>
         </view>
     </view>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </view>
