--- a/pages/pk/followers/followers.wxml
+++ b/pages/pk/followers/followers.wxml
@@ -8,46 +8,56 @@
     <view class="rcs " style="height:20px"></view>
   </view>
 
-  <view class="css" wx:for="{{followers}}" wx:for-index="bindex" wx:for-item="follower" wx:key="postkey">
+    <view wx:if="{{followers&&followers.length > 0}}" class="css">
+        <view class="css" wx:for="{{followers}}" wx:for-index="bindex" wx:for-item="follower" wx:key="postkey">
 
-      <view class="rss pb-30 pt-30">
-                <view class="rcc" style="width: 150rpx">
-                        
-                    
-                         
-                                    <view class="rcc" bindtap="userCenter" data-follower="{{follower}}">
-                                        <image class="rcc w-100 h-100 br-100 " src="{{follower.imgUrl}}" mode="aspectFill"></image>
-                                    </view>
+            <view class="rss pb-30 pt-30">
+                        <view class="rcc" style="width: 150rpx">
+                                
                             
-                      
-                
-                </view>
-            
-                <view class="cas" style="flex:1">
-                    <view class="css"> 
-                       <view class="rus line-1-start fs-35 fw-650 c-word-6 f-shadow3" bindtap="userCenter" data-follower="{{follower}}">{{follower.userName}}</view>
-                    </view>
-                    <view class="rcs"><view class="fs-25 fw-400 c-3">300个关注</view></view>
-                </view>
-                <view class="rcc">
-                    <view style="width: 10vw"></view>
-                    <view wx:if="{{user.userId == targetUserId}}" class="rcc">
-                        <view wx:if="{{follower.followStatu === 1}}" class="rcc h-60 w-180 b-48 c-1 border10 br-10  fs-28 fw-700" bindtap="cancelFollow" data-targetid="{{follower.userId}}" data-index="{{bindex}}">取消关注</view>
-                        <view wx:else class="rcc h-60 w-180 b-red c-white br-10  fs-28 fw-700" bindtap="follow" data-targetid="{{follower.userId}}" data-index="{{bindex}}">关注</view>
-                    </view>
-                    <view wx:else class="rcc">
-                        <view class="rcc c-3  fs-25 fw-300" >{{follower.followTime}}</view>
-                    </view>
+                                
+                                            <view class="rcc" bindtap="userCenter" data-follower="{{follower}}">
+                                                <image class="rcc w-100 h-100 br-100 " src="{{follower.imgUrl}}" mode="aspectFill"></image>
+                                            </view>
+                                    
+                            
+                        
+                        </view>
+                    
+                        <view class="cas" style="flex:1">
+                            <view class="css"> 
+                            <view class="rus line-1-start fs-35 fw-650 c-word-6 f-shadow3" bindtap="userCenter" data-follower="{{follower}}">{{follower.userName}}</view>
+                            </view>
+                            <view class="rcs"><view class="fs-25 fw-400 c-3">300个关注</view></view>
+                        </view>
+                        <view class="rcc">
+                            <view style="width: 10vw"></view>
+                            <view wx:if="{{user.userId == targetUserId}}" class="rcc">
+                                <view wx:if="{{follower.followStatu === 1}}" class="rcc h-60 w-180 b-48 c-1 border10 br-10  fs-28 fw-700" bindtap="cancelFollow" data-targetid="{{follower.userId}}" data-index="{{bindex}}">取消关注</view>
+                                <view wx:else class="rcc h-60 w-180 b-red c-white br-10  fs-28 fw-700" bindtap="follow" data-targetid="{{follower.userId}}" data-index="{{bindex}}">关注</view>
+                            </view>
+                            <view wx:else class="rcc">
+                                <view class="rcc c-3  fs-25 fw-300" >{{follower.followTime}}</view>
+                            </view>
 
-                    <view style="width:5vw"></view>
-                </view>
+                            <view style="width:5vw"></view>
+                        </view>
 
-      </view>
-              
-  </view>
-  <view class="css h-300">
-      <view hidden="{{!nomore}}" class="rcc h-100 fs-30 fw-400 c-3">没有更多...</view>
-  </view>
+            </view>
+                    
+        </view>
+        <view class="css h-300">
+            <view hidden="{{!nomore}}" class="rcc h-100 fs-30 fw-400 c-3">没有更多...</view>
+        </view>
+
+    </view>
+    <view wx:else class="ccc "  style="flex:1">
+        <view class="rcc">
+            <image class="h-400 w-400" mode="aspectFit" src="{{emptyImage}}" ></image>
+        </view>
+        <view class="fs-30 fw-300 c-3">暂无关注</view>
+    </view>
+
 
 
 
@@ -67,7 +77,7 @@
 
             </view>
 
-            <view class="rcc fs-35 fw-700">我的关注</view>
+            <view class="rcc fs-35 fw-700">{{target.userId===user.userId?'我':'Ta'}}的关注</view>
             <view class="rcc" style="flex:1">
             </view>
         
