--- a/pages/pk/userFind/userFind.wxml
+++ b/pages/pk/userFind/userFind.wxml
@@ -21,35 +21,21 @@
         <view class="rcs " style="height:10px"></view>
     </view>
 
-    <view wx:if="{{findUser.exist}}" class="css p-6vw">
-        <view class="ccc h-150">
+    <view wx:if="{{findUser.exist}}" class="css pl-6vw pr-6vw">
+        <view class="ccc h-200">
+            <view wx:if="{{findUser.statu.key===2}}" class="ccc  p-30 br-20 b-48">
+                  <view class="fs-40 fw-700 c-red">{{findUser.timeExpire}}</view>
+                  <view class="fs-25 fw-400 c-word-6">已打捞时间</view>
+            </view>
+            <view wx:else class="rcc">
+                <view class="h-200 w-300 "  style="background-position: center;background-image: url({{createFindUserImage}});background-repeat: no-repeat;background-size: auto 130%;"></view>
+                <!-- <image class="w-150 h-150" mode="aspectFit" src="{{createFindUserImage}}"></image> -->
+            </view>
 
-          <view wx:if="{{!findUser.statu}}" class="rcc">
-              <image class="w-80 h-80" mode="aspectFit" src="/images/find.png"></image>
-          </view>
-          <view wx:else class="rcc">
-              <view wx:if="{{findUser.statu.key===0}}" class="ccc">
-                <image class="w-80 h-80" mode="aspectFit" src="/images/find.png"></image>
-  
-              </view>
-              <view wx:elif="{{findUser.statu.key===1}}" class="ccc">
-                <image class="w-80 h-80" mode="aspectFit" src="/images/find.png"></image>
-                <!-- <view class="h-20"></view>
-                <view class="fs-25 fw-400 c-red">审核中</view> -->
-              </view>
-              <view wx:elif="{{findUser.statu.key===2}}" class="ccc p-30 br-20 b-48">
-                <view class="fs-40 fw-700 c-red">{{findUser.timeExpire}}</view>
-                <view class="fs-25 fw-400 c-word-6">已打捞时间</view>
-              </view>
-              <view wx:elif="{{findUser.statu.key===3}}" class="ccc p-30 br-20 b-48">
-                <view class="fs-40 fw-700 c-red">已结束</view>
-                <view class="fs-25 fw-400 c-word-6" bindtap="clearUserFind">清除</view>
-              </view>
-              <view wx:else class="rcc p-20">
-               <image class="w-80 h-80" mode="aspectFit" src="/images/find.png"></image>
-              </view>
-          </view>
         </view>
+
+
+
         <view class="h-20"></view>
         <view class="rbc-nowrap pt-30 pb-30 b-line"> 
             <view class="rcs w-300 fs-30 fw-700">状态</view>
@@ -64,6 +50,11 @@
               
               <!-- <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image> -->
             </view>
+        </view>
+        <view hidden="{{!findUser.startTime||!findUser.endTime}}" class="rbc-nowrap pt-30 pb-30 b-line"> 
+            <view class="rcs w-300 fs-30 fw-700">时间</view>
+         
+            <view class="rcc fs-30 fw-400 c-4 ">{{findUser.startTime}}~{{findUser.endTime}}</view>
         </view>
         <view class="rbc-nowrap pt-30 pb-30 b-line" bindtap="showPk" data-pk="{{findUser.pk}}"> 
             <view class="rcs w-300 fs-30 fw-700">卡点</view>
@@ -112,7 +103,7 @@
           </view>
           <view hidden="{{!findUser.text}}" class="h-20"></view>
           <view hidden="{{!findUser.text}}" class="css b-48 p-20">
-            <view class="rus  line-5-start fs-30 fw-400 c-4">{{findUser.text}}</view>
+            <view class="rus  line-3-start fs-30 fw-400 c-4">{{findUser.text}}</view>
           </view>
 
         </view>
@@ -125,16 +116,16 @@
 
             <view class="rcc" bindtap="uploadImgs">
               <view class="rcc w-100 h-100 br-10 b-48">
-                <image class="{{findUser.img3?'w-100 h-100 br-10':'w-40 h-40'}}" mode="aspectFill" src="{{findUser.img3?findUser.img3:'/images/pic1.png'}}"></image>
+                <image class="{{findUser.img3?'w-100 h-100 br-10':'w-100 h-100'}}" mode="aspectFill" src="{{findUser.img3?findUser.img3:emptyImage}}"></image>
               </view>
               
               <view class="w-10"></view>
               <view class="rcc w-100 h-100 br-10 b-48">
-                <image class="{{findUser.img2?'w-100 h-100 br-10':'w-40 h-40'}}" mode="aspectFill" src="{{findUser.img2?findUser.img2:'/images/pic1.png'}}"></image>
+                <image class="{{findUser.img2?'w-100 h-100 br-10':'w-100 h-100'}}" mode="aspectFill" src="{{findUser.img2?findUser.img2:emptyImage}}"></image>
               </view>
               <view class="w-10"></view>
               <view class="rcc w-100 h-100 br-10 b-48">
-                <image class="{{findUser.img1?'w-100 h-100 br-10':'w-40 h-40'}}" mode="aspectFill" src="{{findUser.img1?findUser.img1:'/images/pic1.png'}}"></image>
+                <image class="{{findUser.img1?'w-100 h-100 br-10':'w-100 h-100'}}" mode="aspectFill" src="{{findUser.img1?findUser.img1:emptyImage}}"></image>
               </view>
               
               <view class="rcc w-10"></view>
@@ -146,14 +137,14 @@
 
 
     </view>
-    <view wx:else class="css">
-        <view class="h-300"></view>
+    <view wx:else class="cac" style="flex:1">
+        
         <view class="ccc">
-          <image class="w-80 h-80" mode="aspectFit" src="/images/find.png"></image>
-          <view class="h-30"></view>
-          <view class="rcc fs-25 fw-300 w-200 h-60 br-60 b-white c-3" bindtap="create">创建</view>
+          <image class="w-400 h-400" mode="aspectFit" src="{{createFindUserImage}}"></image>
+     
+          <view class="rcc fs-60 fw-700 c-3" bindtap="create">+</view>
         </view>
-    
+        <view></view>
     </view>
 
 
@@ -173,13 +164,13 @@
 <view class="ccc uploadButton">
   <!-- 没创建 -->
   <view hidden="{{!findUser.exist}}" class="css">
-    <view wx:if="{{!findUser.statu}}" class="ccc">
+    <!-- <view wx:if="{{!findUser.statu}}" class="ccc">
       <view wx:if="{{findUser.findLength === 0 || findUser.text.length===0}}" class="rcc fs-30 fw-700 w-300 h-80 br-80 b-48 c-3">保存</view>
       <view wx:else class="rcc fs-30 fw-700 w-300 h-80 br-80 b-red c-white" bindtap="saveFind">保存</view>
       <view class="p-20 fs-25 fw-400 c-word-6 "></view>
-    </view>
-    <view wx:else class="rcc ">
-      <view wx:if="{{findUser.statu.key===0}}" class="ccc">
+    </view> -->
+    <!-- <view wx:else class="rcc "> -->
+      <!-- <view wx:if="{{findUser.statu.key===0}}" class="ccc">
           <view class="rcc fs-30 fw-700 w-300 h-80 br-80 {{(findUser.findLength === 0 || findUser.text.length===0)?'b-48 c-3':'b-red c-white'}} " bindtap="{{(findUser.findLength === 0 || findUser.text.length===0)?'':'startFind'}}">开捞</view>
           
           <view class="rcc pt-20">
@@ -187,17 +178,28 @@
               <view class="w-50"></view>
               <view class="rcc h-70 fs-25 fw-400 c-word-6 " bindtap="saveFind">保存</view>
           </view>
-      </view>
-      <view wx:elif="{{findUser.statu.key===3}}" class="ccc">
+      </view> -->
+      <view wx:if="{{findUser.statu && findUser.statu.key===3}}" class="ccc">
           <view class="rcc fs-30 fw-700 w-300 h-80 br-80 b-red c-white" bindtap="clearUserFind">清除</view>
           <view class="rcc h-70 fs-25 fw-400 c-word-6 "></view>
       </view>
-      <view wx:else class="ccc">
+      <view wx:elif="{{findUser.statu && (findUser.statu.key===2 || findUser.statu.key===1)}}" class="ccc">
           <view class="rcc fs-30 fw-700 w-300 h-80 br-80 b-48 c-4" bindtap="giveUpUserPkFind">放弃打捞</view>
           <view class="rcc h-70 fs-25 fw-400 c-word-6 "> </view>
 
       </view>
-    </view>
+      <view wx:else class="ccc">
+          <view class="rcc fs-30 fw-700 w-300 h-80 br-80 {{(findUser.findLength === 0 || findUser.text.length===0)?'b-48 c-3':'b-red c-white'}} " bindtap="{{(findUser.findLength === 0 || findUser.text.length===0)?'':'startFind'}}">开捞</view>
+          
+          <view class="rcc pt-20">
+              <view class="rcc h-70 fs-25 fw-400 c-word-6 " bindtap="clearUserFind">清除</view>
+              <!-- <view class="w-50"></view> -->
+              <!-- <view class="rcc h-70 fs-25 fw-400 c-word-6 " bindtap="saveFind">保存</view> -->
+          </view>
+      </view>
+
+
+    <!-- </view> -->
   </view>
 
 
